# maxx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon
docs/: syntax.bnf
grammar/: maxx.g4
src/: main.cpp
src/docs/: example.maxx  syntax.bnf
src/frontend/: token_types.zig  tokenizer.zig
src/structs/: CharMap.zig
